--- a/stu/README
+++ b/stu/README
@@ -1,3 +1,3 @@
 # Dependency Injection
 
-![alt text](https://github.com/RFC6592/mSpringBoot/blob/main/stu/DependencyInjection.png)
+![alt text](https://github.com/RFC6592/mSpringBoot/blob/main/stu/DependencyInjection.png?raw=true)
